Changelog for GitPackageManagement.

GitPackageManagement 0.1.0 alpha
==============
- Clone package from git to specific folder
- Install package from folder
- Uninstall package

- Installation process can handle:
    - Creating namespace
    - Creating system settings
    - Creating actions and menus
    - Creating elements: chunks, snippets, templates and plugins as static (better for development process)
    - Creating database tables
    - Adding extension package