@@ -1,5 +1,13 @@
 Changelog for GitPackageManagement.
 
+GitPackageManagement 0.1.2 alpha
+==============
+- Added base href for packages directory
+
+GitPackageManagement 0.1.1 alpha
+==============
+- Fixed elements path
+
 GitPackageManagement 0.1.0 alpha
 ==============
 - Clone package from git to specific folder
